[package]
name = "rbin"
version = "0.1.3" # Incremented version
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] } # Web framework
tokio = { version = "1", features = ["full"] } # Async runtime
rand = "0.8" # For random ID generation
tracing = "0.1" # Logging framework
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
] } # Logging setup
tower-http = { version = "0.6", features = [
  "trace",
] } # HTTP utilities (like tracing)
serde = "1.0" # Required by axum for some features, good practice to include
hyper = { version = "1", features = [
  "full",
] } # Underlying HTTP library for axum
dotenvy = "0.15" # Load .env files
